# advanced_graphics

./: .gitignore  CMakeLists.txt  Cone.cpp  Cone.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Triangle.cpp  Triangle.h  TriangleAggregate.cpp  TriangleAggregate.h  baseimage.h  blue-earth.yaml  box.cpp  box.h  commongeometry.cpp  commongeometry.h  glm.cpp  glm.h  image.cpp  image.h  light.cpp  light.h  main.cpp  material.cpp  material.h  object.cpp  object.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  scene01-camera-ss-reflect-lights-shadows.yaml  scene01-lights-shadows.yaml  scene01-ss.yaml  scene01-zoom-ss-reflect-lights-shadows.yaml  scene01.yaml  scene02.yaml  scene03.yaml  (+11 more)
yaml/: emitterstate.cpp  emitterstate.h  map.cpp  node.cpp  node.h  setting.h
